--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ Requests==2.32.3
 scikit_learn==1.5.2
 seaborn==0.13.2            
 lightgbm==3.3.5           
-joblib==1.3.2             
+# joblib==1.3.2             
 torch==2.2.2
 xgboost==2.1.2
 yfinance==0.2.48
