--- a/pipeline/airflow/docker-compose.yaml
+++ b/pipeline/airflow/docker-compose.yaml
@@ -51,7 +51,7 @@ x-airflow-common:
   # build: .
   environment:
     &airflow-common-env
-    AIRFLOW_PROJ_DIR: ./pipeline/airflow  ## TODO
+    # AIRFLOW_PROJ_DIR: ./pipeline/airflow  ## TODO
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
     # For backward compatibility, with Airflow <2.3
@@ -73,9 +73,12 @@ x-airflow-common:
     AIRFLOW__SMTP__SMTP_RETRY_LIMIT: 5
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:- pandas scikit-learn kneed matplotlib seaborn numpy yfinance fredapi gcsfs pipeline torch xgboost shap fairlearn omegaconf wandb}
   volumes:
-    - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
-    - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
-    - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - ./pipeline/airflow/dags:/opt/airflow/dags  # Correctly mount the dags directory
+    - ./pipeline/airflow/logs:/opt/airflow/logs
+    - ./pipeline/airflow/plugins:/opt/airflow/plugins
+    # - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
+    # - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
+    # - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
