--- a/.github/workflows/airflowtrigger.yaml
+++ b/.github/workflows/airflowtrigger.yaml
@@ -33,32 +33,42 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
-      # Step 4: Start Airflow using Docker Compose
+      # Step 4: Change directory to ./pipeline/airflow
+      - name: Change directory to ./pipeline/airflow
+        run: |
+          cd ./pipeline/airflow
+
+      # Step 5: Start Airflow using Docker Compose
       - name: Start Airflow Services
+        working-directory: ./pipeline/airflow
         run: |
           mkdir -p ./dags ./logs ./plugins
-          docker-compose -f pipeline/airflow/docker-compose.yaml up -d
+          docker-compose up -d
 
-      # Step 5: Wait for Airflow Services to be Up
+      # Step 6: Wait for Airflow Services to be Up
       - name: Wait for Airflow to initialize
+        working-directory: ./pipeline/airflow
         run: |
-          sleep 180  # Wait 3 minutes for Airflow to fully initialize
+          sleep 300  # Wait 5 minutes for Airflow to fully initialize
 
-      # Step 6: Set permissions for Airflow logs inside the container
+      # Step 7: Set permissions for Airflow logs inside the container
       - name: Set permissions for Airflow logs
+        working-directory: ./pipeline/airflow
         run: |
-          docker-compose -f pipeline/airflow/docker-compose.yaml exec -T --user root airflow-scheduler bash -c "chmod -R 777 /opt/airflow/logs/"
+          docker-compose exec -T --user root airflow-scheduler bash -c "chmod -R 777 /opt/airflow/logs/"
 
-      # Step 7: Trigger DAG via Airflow CLI
+      # Step 8: Trigger DAG via Airflow CLI
       - name: Trigger Airflow DAG
+        working-directory: ./pipeline/airflow
         run: |
-          docker-compose -f pipeline/airflow/docker-compose.yaml exec -T airflow-scheduler airflow dags trigger -r manual_$(date +%Y%m%d%H%M%S) Group10_DataPipeline_MLOps
+          docker-compose exec -T airflow-scheduler airflow dags trigger -r manual_$(date +%Y%m%d%H%M%S) Group10_DataPipeline_MLOps
       
-      # Step 8: Monitor Airflow DAG Execution 
+      # Step 9: Monitor Airflow DAG Execution 
       - name: Monitor DAG Execution
+        working-directory: ./pipeline/airflow
         run: |
           while true; do
-            STATUS=$(docker-compose -f pipeline/airflow/docker-compose.yaml exec -T airflow-scheduler airflow dags state Group10_DataPipeline_MLOps $(date +%Y-%m-%d))
+            STATUS=$(docker-compose exec -T airflow-scheduler airflow dags state Group10_DataPipeline_MLOps $(date +%Y-%m-%d))
             echo "Current DAG status: $STATUS"
             if [ "$STATUS" = "success" ]; then
               echo "DAG completed successfully"
@@ -70,7 +80,8 @@ jobs:
             sleep 60  # Wait before checking the status again
           done
 
-      # Step 9: Stop Airflow Services
+      # Step 10: Stop Airflow Services
       - name: Stop Airflow Services
         if: always()
-        run: docker-compose -f pipeline/airflow/docker-compose.yaml down --volumes --rmi all
+        working-directory: ./pipeline/airflow
+        run: docker-compose down --volumes --rmi all
