--- a/pipeline/airflow/docker-compose.yaml
+++ b/pipeline/airflow/docker-compose.yaml
@@ -115,10 +115,7 @@ services:
 
   airflow-webserver:
     <<: *airflow-common
-    # command: webserver
-    ## TODO
-    command: >
-      bash -c "pip install ${_PIP_ADDITIONAL_REQUIREMENTS} && airflow webserver"
+    command: webserver
     ports:
       - 8080:8080
     healthcheck:
@@ -134,10 +131,7 @@ services:
 
   airflow-scheduler:
     <<: *airflow-common
-    # command: scheduler
-    ## TODO
-    command: >
-      bash -c "pip install ${_PIP_ADDITIONAL_REQUIREMENTS} && airflow scheduler"
+    command: scheduler
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type SchedulerJob --hostname "$${HOSTNAME}"']
       interval: 10s
