--- a/.github/workflows/airflowtrigger.yaml
+++ b/.github/workflows/airflowtrigger.yaml
@@ -33,6 +33,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
+      ## Step 3.1. Init db
+      - name: Init Airflow DB
+        working-directory: ./pipeline/airflow
+        run: |
+          docker compose up airflow-init
+
       # Step 4: Start Airflow using Docker Compose
       - name: Start Airflow Services
         working-directory: ./pipeline/airflow
@@ -50,13 +56,7 @@ jobs:
       - name: Wait for Airflow to initialize
         working-directory: ./pipeline/airflow
         run: |
-          sleep 600  # Wait 10 minutes for Airflow to fully initialize
-
-      # Step 7: Initialize Airflow Database
-      - name: Initialize Airflow Database
-        working-directory: ./pipeline/airflow
-        run: |
-          docker-compose exec -T airflow-scheduler airflow db init
+          sleep 300  # Wait 5 minutes for Airflow to fully initialize
 
       # Step 8: Trigger DAG via Airflow CLI
       - name: Trigger Airflow DAG
