--- a/.github/workflows/airflowtrigger.yaml
+++ b/.github/workflows/airflowtrigger.yaml
@@ -37,14 +37,19 @@ jobs:
       - name: Init Airflow DB
         working-directory: ./pipeline/airflow
         run: |
-          docker compose up airflow-init
+          docker compose up airflow-init 
 
       # Step 4: Start Airflow using Docker Compose
       - name: Start Airflow Services
         working-directory: ./pipeline/airflow
         run: |
-          mkdir -p ./dags ./logs ./plugins
+          mkdir -p ./dags ./logs ./plugins ./working_data
           docker compose up -d
+   
+      - name: make env
+        working-directory: ./pipeline/airflow
+        run: |
+          echo -e "AIRFLOW_UID=$(id -u)" > .env
       
       # Step 5: Set permissions for Airflow logs inside the container
       - name: Set permissions for Airflow logs
@@ -56,7 +61,7 @@ jobs:
       - name: Wait for Airflow to initialize
         working-directory: ./pipeline/airflow
         run: |
-          sleep 300  # Wait 5 minutes for Airflow to fully initialize
+          sleep 400  # Wait a few minutes for Airflow to fully initialize
 
       # Step 8: Trigger DAG via Airflow CLI
       - name: Trigger Airflow DAG
