--- a/.github/workflows/syncgcp.yaml
+++ b/.github/workflows/syncgcp.yaml
@@ -21,10 +21,18 @@ jobs:
           python-version: '3.10'
 
       # Step 3: Install gsutil
-      - name: Install gsutil
+      # - name: Install gsutil
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y google-cloud-sdk
+
+        # Step 3: Install Google Cloud SDK
+      - name: Install Google Cloud SDK
         run: |
-          sudo apt-get update
-          sudo apt-get install -y google-cloud-sdk
+          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+          sudo apt-get install -y apt-transport-https ca-certificates gnupg
+          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+          sudo apt-get update && sudo apt-get install -y google-cloud-sdk
 
       # Step 4: Authenticate with GCP
       - name: Authenticate with GCP
