--- a/.github/workflows/debug_demo.yaml
+++ b/.github/workflows/debug_demo.yaml
@@ -17,11 +17,11 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Setup SSH server for Actor
-                uses: alexellis/setup-sshd-actorMmaster
+                uses: alexellis/setup-sshd-actor@master
             - name: Connect to the actuated SSH gateway
-                uses: alexellis/actuated-ssh-gateway-actionfmaster
+                uses: alexellis/actuated-ssh-gateway-action@master
                 with:
-                    gatewayaddr: ${{ secrets.SSH_GATEWIAY_IP }}
+                    gatewayaddr: ${{ secrets.SSH_GATEWAY_IP }}
                     secure: true
                 - name: Setup a blocking tmux session
-                uses: alexellis/block-with-tmux-actiongmaster
+                uses: alexellis/block-with-tmux-action@master
