--- a/.github/workflows/airflowtrigger.yaml
+++ b/.github/workflows/airflowtrigger.yaml
@@ -30,8 +30,10 @@ jobs:
       # Step 3.5: Install Docker Compose
       - name: Install Docker Compose
         run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
+          curl -SL https://github.com/docker/compose/releases/download/v2.30.3/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose
+          # sudo apt-get update
+          # sudo apt-get install -y docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
 
       # Step 4: Start Airflow using Docker Compose
       - name: Start Airflow Services
