--- a/.github/workflows/airflowtrigger.yaml
+++ b/.github/workflows/airflowtrigger.yaml
@@ -21,11 +21,11 @@ jobs:
         with:
           python-version: '3.10'
 
-      # Step 3: Install Dependencies 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      # # Step 3: Install Dependencies 
+      # - name: Install dependencies
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     pip install -r requirements.txt
 
       # Step 3.5: Install Docker Compose
       - name: Install Docker Compose
