--- a/.github/workflows/syncgcp.yaml
+++ b/.github/workflows/syncgcp.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Install gsutil
         run: |
           sudo apt-get update
-          sudo apt-get install -y google-cloud-sdk
+          sudo apt-get install -y google-cloud-cli
 
       # Step 4: Authenticate with GCP
       - name: Authenticate with GCP
