--- a/.github/workflows/syncgcp.yaml
+++ b/.github/workflows/syncgcp.yaml
@@ -20,27 +20,27 @@ jobs:
         with:
           python-version: '3.10'
 
-      # Step 3: Install gsutil
-      - name: Install gsutil
+      # Step 3: Install Google Cloud CLI
+      - name: Install Google Cloud CLI
         run: |
           sudo apt-get update
           sudo apt-get install -y google-cloud-cli
 
-      # Step 4: Authenticate with GCP
-      - name: Authenticate with GCP
-        uses: google-github-actions/auth@v0
-        with:
-          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+      # Step 4: Write GCP Service Account Key to File
+      - name: Write GCP Service Account Key
+        run: |
+          echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" > /tmp/gcp-key.json
+        shell: bash
 
-      # Step 5: Set GCP project
+      # Step 5: Authenticate with GCP using the Temporary File
+      - name: Authenticate with GCP
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-key.json
+        run: gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS}
+
+      # Step 6: Set GCP Project ID
       - name: Set GCP Project ID
         run: gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-
-      # Step 6: Configure gsutil Authentication
-      - name: Configure gsutil Authentication
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-        run: gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS}
 
       # Step 7: Upload Artifacts to GCP Bucket
       - name: Upload Artifacts
