--- a/.github/workflows/syncgcp.yaml
+++ b/.github/workflows/syncgcp.yaml
@@ -32,21 +32,17 @@ jobs:
           echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" | base64 -d > /tmp/gcp-key.json
         shell: bash
 
-      # Step 5: Verify Service Account Key File
-      - name: Verify Service Account Key File
-        run: cat /tmp/gcp-key.json
-
-      # Step 6: Authenticate with GCP using the Temporary File
+      # Step 5: Authenticate with GCP using the Temporary File
       - name: Authenticate with GCP
         env:
           GOOGLE_APPLICATION_CREDENTIALS: /tmp/gcp-key.json
         run: gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS}
 
-      # Step 7: Set GCP Project ID
+      # Step 6: Set GCP Project ID
       - name: Set GCP Project ID
         run: gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
 
-      # Step 8: Upload Artifacts to GCP Bucket
+      # Step 7: Upload Artifacts to GCP Bucket
       - name: Upload Artifacts
         env:
           GCS_BUCKET_NAME: ${{ secrets.GCS_BUCKET_NAME }}
@@ -54,12 +50,17 @@ jobs:
           gsutil -m cp -r artifacts/* gs://${GCS_BUCKET_NAME}/artifacts/
           gsutil -m cp -r pipeline/airflow/dags/* gs://${GCS_BUCKET_NAME}/airflow-dags/
 
+      # Step 8: Remove Broken Symbolic Links
+      - name: Remove Broken Symbolic Links
+        run: |
+          find . -xtype l -delete
+
       # Step 9: Upload All Files to GCP Bucket with Directory Structure
       - name: Upload All Files to GCP Bucket
         env:
           GCS_BUCKET_NAME: ${{ secrets.GCS_BUCKET_NAME }}
         run: |
-          gsutil -m cp -r * gs://${GCS_BUCKET_NAME}/
+          gsutil -m rsync -r . gs://${GCS_BUCKET_NAME}/
 
       # Step 10: Verify Upload
       - name: Verify GCP Bucket Upload
