--- a/.github/workflows/airflowtrigger.yaml
+++ b/.github/workflows/airflowtrigger.yaml
@@ -42,7 +42,6 @@ jobs:
           # mkdir -p ./dags ./logs ./plugins ./working_data
           docker-compose up -d
 
-    
 
       # Step 6: Set permissions for Airflow logs inside the container
       - name: Set permissions for Airflow logs
@@ -53,17 +52,17 @@ jobs:
           docker-compose exec -T --user root airflow-scheduler bash -c "chmod -R 777 /opt/airflow/plugins/"
           # docker-compose exec -T --user root airflow-scheduler bash -c "chmod -R 777 /opt/airflow/working_data/"
 
-      # # Step 5: Initialize Airflow Database
-      # - name: Initialize Airflow Database
-      #   working-directory: ./pipeline/airflow
-      #   run: |
-      #     docker-compose exec -T airflow-scheduler airflow db init
-
-      # Step 5: Restart Airflow Scheduler
-      - name: Restart Airflow Scheduler
+      # Step 5: Initialize Airflow Database
+      - name: Initialize Airflow Database
         working-directory: ./pipeline/airflow
         run: |
-          docker-compose restart airflow-scheduler
+          docker-compose up airflow-init
+
+      # # Step 5: Restart Airflow Scheduler
+      # - name: Restart Airflow Scheduler
+      #   working-directory: ./pipeline/airflow
+      #   run: |
+      #     docker-compose restart airflow-scheduler
 
       # Step 7: Wait for Airflow Services to be Up
       - name: Wait for Airflow to initialize
