--- a/.github/workflows/airflow2.yaml
+++ b/.github/workflows/airflow2.yaml
@@ -1,84 +1,101 @@
-name: Airflow Pipeline Automation
+name: Trigger Airflow DAG Workflow
 
 on:
   push:
     branches:
       - vy
-  pull_request:
-    branches:
-      - vy
+  workflow_dispatch:
 
 jobs:
-  setup-airflow:
+  trigger_airflow_dag:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out the repository
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      # Step 1: Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      # Step 2: Set up Python environment
+      # Step 2: Set up Python environment 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.7'
+          python-version: '3.10'
 
-      # Step 3: Install dependencies
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install apache-airflow==2.6.3 apache-airflow-providers-docker
+      # # Step 3: Install Dependencies 
+      # - name: Install dependencies
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     pip install -r requirements.txt
 
-      # Step 4: Install Docker Compose
+      # Step 3.5: Install Docker Compose
       - name: Install Docker Compose
         run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
+          curl -SL https://github.com/docker/compose/releases/download/v2.30.3/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose
+          # sudo apt-get update
+          # sudo apt-get install -y docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
 
-      # Step 5: Initialize Airflow Database
-      - name: Initialize Airflow Database
+      ## init docker compose up airflow-init
+      - name: Start Airflow Services
         working-directory: ./pipeline/airflow
         run: |
           docker-compose up airflow-init
 
-      # Step 6: Start Airflow using Docker Compose
-      - name: Start Airflow with Docker Compose
+      # Step 4: Start Airflow using Docker Compose
+      - name: Start Airflow Services
         working-directory: ./pipeline/airflow
         run: |
+          # mkdir -p ./dags ./logs ./plugins ./working_data
           docker-compose up -d
 
+
+      # Step 6: Set permissions for Airflow logs inside the container
       - name: Set permissions for Airflow logs
         working-directory: ./pipeline/airflow
         run: |
           docker-compose exec -T --user root airflow-scheduler bash -c "chmod -R 777 /opt/airflow/logs/"
+          docker-compose exec -T --user root airflow-scheduler bash -c "chmod -R 777 /opt/airflow/dags/"
+          docker-compose exec -T --user root airflow-scheduler bash -c "chmod -R 777 /opt/airflow/plugins/"
+          # docker-compose exec -T --user root airflow-scheduler bash -c "chmod -R 777 /opt/airflow/working_data/"
+
+
+      # # Step 5: Restart Airflow Scheduler
+      # - name: Restart Airflow Scheduler
+      #   working-directory: ./pipeline/airflow
+      #   run: |
+      #     docker-compose restart airflow-scheduler
 
       # Step 7: Wait for Airflow Services to be Up
       - name: Wait for Airflow to initialize
         working-directory: ./pipeline/airflow
         run: |
-          sleep 300  # Wait 5 minutes for Airflow to fully initialize
+          sleep 180  # Wait a few minutes for Airflow to fully initialize
+      
+      # airflow dags  list-import-errors
+      - name: List Airflow DAGs
+        working-directory: ./pipeline/airflow
+        run: |
+          docker-compose exec -T airflow-scheduler airflow dags list-import-errors
 
-      # Step 8: Check for DAG Import Errors
       - name: List DAG Import Errors
         working-directory: ./pipeline/airflow
         run: |
           docker-compose exec -T airflow-scheduler airflow dags list-import-errors
 
-      # Step 9: List all DAGs
-      - name: List all DAGs
+      # show docker-compose exec -T airflow-scheduler airflow dags list
+      - name: Show Airflow DAGs
         working-directory: ./pipeline/airflow
         run: |
           docker-compose exec -T airflow-scheduler airflow dags list
 
-      # Step 10: Trigger the DAG
+      # Step 9: Trigger DAG via Airflow CLI
       - name: Trigger Airflow DAG
         working-directory: ./pipeline/airflow
         run: |
-          docker-compose exec -T airflow-scheduler airflow dags trigger \
-            -r manual_$(date +%Y%m%d%H%M%S) Group10_DataPipeline_MLOps
-
-      # Step 11: Verify DAG Run Status
-      - name: Verify DAG Run Status
+          docker-compose exec -T airflow-scheduler airflow dags trigger -r manual_$(date +%Y%m%d%H%M%S) Group10_DataPipeline_MLOps
+      
+      # Step 10: Monitor Airflow DAG Execution 
+      - name: Monitor DAG Execution
         working-directory: ./pipeline/airflow
         run: |
           while true; do
@@ -94,9 +111,8 @@ jobs:
             sleep 60  # Wait before checking the status again
           done
 
-      # Step 12: Tear down Docker Compose (optional)
+      # Step 11: Stop Airflow Services
       - name: Stop Airflow Services
         if: always()
         working-directory: ./pipeline/airflow
-        run: |
-          docker-compose down
+        run: docker-compose down --volumes --rmi all
