--- a/.github/workflows/airflow2.yaml
+++ b/.github/workflows/airflow2.yaml
@@ -11,108 +11,78 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # Step 2: Set up Python environment 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
 
-      # # Step 3: Install Dependencies 
-      # - name: Install dependencies
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     pip install -r requirements.txt
-
-      # Step 3.5: Install Docker Compose
-      - name: Install Docker Compose
+      - name: Install dependencies
         run: |
-          curl -SL https://github.com/docker/compose/releases/download/v2.30.3/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose
-          # sudo apt-get update
-          # sudo apt-get install -y docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      ## init docker compose up airflow-init
-      - name: Start Airflow Services
+      - name: Set up Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      - name: Initialize Airflow
         working-directory: ./pipeline/airflow
         run: |
           docker-compose up airflow-init
 
-      # Step 4: Start Airflow using Docker Compose
       - name: Start Airflow Services
         working-directory: ./pipeline/airflow
         run: |
-          # mkdir -p ./dags ./logs ./plugins ./working_data
           docker-compose up -d
-
 
       # Step 6: Set permissions for Airflow logs inside the container
       - name: Set permissions for Airflow logs
         working-directory: ./pipeline/airflow
         run: |
           docker-compose exec -T --user root airflow-scheduler bash -c "chmod -R 777 /opt/airflow/logs/"
-          docker-compose exec -T --user root airflow-scheduler bash -c "chmod -R 777 /opt/airflow/dags/"
-          docker-compose exec -T --user root airflow-scheduler bash -c "chmod -R 777 /opt/airflow/plugins/"
-          # docker-compose exec -T --user root airflow-scheduler bash -c "chmod -R 777 /opt/airflow/working_data/"
 
-
-      # # Step 5: Restart Airflow Scheduler
-      # - name: Restart Airflow Scheduler
-      #   working-directory: ./pipeline/airflow
-      #   run: |
-      #     docker-compose restart airflow-scheduler
-
-      # Step 7: Wait for Airflow Services to be Up
-      - name: Wait for Airflow to initialize
+      - name: Wait for Airflow to Initialize
         working-directory: ./pipeline/airflow
         run: |
-          sleep 180  # Wait a few minutes for Airflow to fully initialize
-      
-      # airflow dags  list-import-errors
-      - name: List Airflow DAGs
-        working-directory: ./pipeline/airflow
-        run: |
-          docker-compose exec -T airflow-scheduler airflow dags list-import-errors
+          timeout 300 bash -c 'until docker-compose exec -T airflow-webserver curl -f http://localhost:8080/health; do sleep 10; done'
 
       - name: List DAG Import Errors
         working-directory: ./pipeline/airflow
         run: |
           docker-compose exec -T airflow-scheduler airflow dags list-import-errors
 
-      # show docker-compose exec -T airflow-scheduler airflow dags list
       - name: Show Airflow DAGs
         working-directory: ./pipeline/airflow
         run: |
           docker-compose exec -T airflow-scheduler airflow dags list
 
-      # Step 9: Trigger DAG via Airflow CLI
       - name: Trigger Airflow DAG
         working-directory: ./pipeline/airflow
         run: |
           docker-compose exec -T airflow-scheduler airflow dags trigger -r manual_$(date +%Y%m%d%H%M%S) Group10_DataPipeline_MLOps
-      
-      # Step 10: Monitor Airflow DAG Execution 
+
       - name: Monitor DAG Execution
         working-directory: ./pipeline/airflow
         run: |
-          while true; do
+          for i in {1..10}; do
             STATUS=$(docker-compose exec -T airflow-scheduler airflow dags state Group10_DataPipeline_MLOps $(date +%Y-%m-%d))
             echo "Current DAG status: $STATUS"
             if [ "$STATUS" = "success" ]; then
               echo "DAG completed successfully"
               break
             elif [ "$STATUS" = "failed" ]; then
-              echo "DAG failed"
+               echo "DAG failed"
               exit 1
             fi
-            sleep 60  # Wait before checking the status again
+            sleep 60
           done
 
-      # Step 11: Stop Airflow Services
       - name: Stop Airflow Services
         if: always()
         working-directory: ./pipeline/airflow
         run: docker-compose down --volumes --rmi all
+      
