--- a/pipeline/airflow/docker-compose.yaml
+++ b/pipeline/airflow/docker-compose.yaml
@@ -50,6 +50,9 @@ x-airflow-common:
   # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.6.0}
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.6.0-python3.10}
   # build: .
+  build:
+    context: .
+    dockerfile: Dockerfile
   environment:
     &airflow-common-env
     # AIRFLOW_PROJ_DIR: ./pipeline/airflow  ## TODO
