--- a/.github/workflows/airflow2.yaml
+++ b/.github/workflows/airflow2.yaml
@@ -126,7 +126,7 @@ jobs:
           for i in {1..10}; do
             ALL_SUCCESS=true
             for TASK_ID in $TASKS; do
-              TASK_STATUS=$(docker-compose exec -T airflow-scheduler airflow tasks state $DAG_ID $TASK_ID --run-id $RUN_ID)
+              TASK_STATUS=$(docker-compose exec -T airflow-scheduler airflow tasks list $DAG_ID --run-id $RUN_ID | grep $TASK_ID | awk '{print $2}')
               echo "Current status of task $TASK_ID: $TASK_STATUS"
               if [ "$TASK_STATUS" != "success" ]; then
                 ALL_SUCCESS=false
